addons/istio/monitors/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: azure-eventhub-hyukjun
  namespace: istio-system
  labels:
    networking.istio.io/enable-autoallocate-ip: "true"
spec:
  hosts:
    - "hyukjun.servicebus.windows.net" # Event Hub 네임스페이스
  ports:
    - number: 5671
      name: amqp-tls
      protocol: TLS # AMQP over TLS를 표현
    - number: 5672
      name: amqp
      protocol: TCP # 일반 AMQP 트래픽
    - number: 443
      name: https
      protocol: TCP # 일반 AMQP 트래픽
  resolution: DNS
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: ServiceEntry
# metadata:
#   name: azure-cosmosdb
# spec:
#   hosts:
#     - "dev-hyukjun-cosmos.mongo.cosmos.azure.com" # Cosmos DB 계정 이름
#   ports:
#     - number: 10255
#       name: mongo
#       protocol: TCP
#   resolution: DNS
